fix blog screen on smaller screens

--- a/src/components/app-footer/footer.css
+++ b/src/components/app-footer/footer.css
@@ -97,7 +97,7 @@
 
   @media only screen and (max-width: 1537px){
     .custom-about-site-margin{
-      margin-left: -21%;
+      margin-left: -20%;
     }
     .second{
       margin-left: 9%;
